--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     </button>
 
     <h1>
-      Memory Cards
+      Asana
       <button id="show" class="btn btn-small">
         <i class="fas fa-trash"> </i> Add New Pose
       </button>
@@ -92,14 +92,16 @@
           <i class="fas fa-times"> </i>
         </button>
       </h1>
+
+
       <div class="form-group">
-        <label for="question"> question </label>
-        <textarea id="question" placeholder="enter asana.."> enter asana</textarea>
+        <input type="file" accept="image/*" id="uploadImage"><br>
+    <button id="add-image">Submit Picture</button><br>
       </div>
 
       <div class="form-group">
-        <label for="img">Select image:</label>
-        <img id="image" width="30% !important" src="https://static.vecteezy.com/system/resources/previews/000/179/806/original/yoga-instructor-exercising-different-yoga-poses-vector.jpg" />
+        <label for="sanskirt"> sanskirt </label>
+        <textarea id="sanskirt"> enter sanskirt</textarea>
       </div>
 
       <div class="form-group">
