--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     </button>
 
     <h1>
-      Asana
+      Puttering
       <button id="show" class="btn btn-small">
         <i class="fas fa-trash"> </i> Add New Pose
       </button>
@@ -78,7 +78,7 @@
         <i class="fas fa-arrow-left"></i>
       </button>
 
-      <p id="current"> test </p>
+      <p id="current">test</p>
 
       <button id="next" class="nav-button">
         <i class="fas fa-arrow-right"></i>
@@ -93,10 +93,11 @@
         </button>
       </h1>
 
-
       <div class="form-group">
-        <input type="file" accept="image/*" id="uploadImage"><br>
-    <button id="add-image">Submit Picture</button><br>
+        <input type="file" accept="image/*" id="uploadImage" /><br />
+        <button id="add-image">Submit Picture</button><br />
+        <img id="imagePreview" />
+        <img id="imageUploaded" />
       </div>
 
       <div class="form-group">
@@ -109,10 +110,16 @@
         <textarea id="answer"> enter answer</textarea>
       </div>
 
+      <div class="form-group">
+        <label for="cues"> cues </label>
+        <textarea id="cues"> enter cues</textarea>
+      </div>
+
       <button id="add-card" class="btn">
         <i class="fas fa-plus"> </i> add card
       </button>
     </div>
+
 
 
     <!--
