--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,27 @@
         <img id="imagePreview" />
         <img id="imageUploaded" />
       </div>
+      <div class="form-group">
+
+      <!-- <input type='file' />
+<br><img id="myImg" src="#">
+<button id="addImgBtn"> add </button>
+</div> -->
+
+
+      <!-- <div class="form-group">
+        <input
+          type="file"
+          accept="image/*"
+          name="image"
+          id="file"
+          style="display: none;"
+        />
+        <p><label for="file" style="cursor: pointer;">Upload Image</label></p>
+        <p><img id="output" width="200" /></p> -->
+
+        <!-- <button id="loadFile">test</button><br />
+      </div> -->
 
       <div class="form-group">
         <label for="sanskirt"> sanskirt </label>
@@ -119,8 +140,6 @@
         <i class="fas fa-plus"> </i> add card
       </button>
     </div>
-
-
 
     <!--
       This HTML file is a template.
