--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
     </button>
 
     <h1>
-      Puttering
+      French Verbs
       <button id="show" class="btn btn-small">
         <i class="fas fa-trash"> </i> Add New Pose
       </button>
@@ -93,12 +93,7 @@
         </button>
       </h1>
 
-      <div class="form-group">
-        <input type="file" accept="image/*" id="uploadImage" /><br />
-        <button id="add-image">Submit Picture</button><br />
-        <img id="imagePreview" />
-        <img id="imageUploaded" />
-      </div>
+    
       <div class="form-group">
 
       <!-- <input type='file' />
